Java16 & Cleanup